force-app/main/default/objects/Config__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <description>Account identifier for CleverTap integration</description>
    <label>CleverTap Account ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>