force-app/main/default/objects/Config__c/fields/API_URL__c.field-meta.xml
<CustomField>
    <fullName>API_URL__c</fullName>
    <description>URL endpoint for CleverTap API</description>
    <label>CleverTap API URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>